--- a/static/css/organizer_dashboard.css
+++ b/static/css/organizer_dashboard.css
@@ -87,19 +87,41 @@ nav ul li a {
 }
 
 .main-content {
-  /* flex: 1; */
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   padding: 20px;
   overflow-y: auto;
 }
+.gulshan{
+  width: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .profile-container {
-  background: white;
-  width: 40%;
-  margin: auto;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    background: rgba(220, 220, 220, 0.579);
+    width: 70%;
+    height: 400px;
+    text-align: center;
+    margin: 30px 0px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
+
+.profile-image {
+    width: 150px;
+    height: 150px;
+    margin: 15px 0px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 3px solid #012b5a;
+}
+
 
 .nav-profile-image {
   width: 35px;
@@ -147,7 +169,9 @@ button:hover {
 
 .overview-cards {
   display: flex;
-  gap: 100px;
+  flex-direction: column;
+  width: 80%;
+  gap: 50px;
   margin-bottom: 20px;
 }
 
@@ -221,6 +245,13 @@ button:hover {
   background: #2d4373;
 }
 
+.event-list{
+  width: 85%;
+  margin: 40px 0px;
+}
+.event-list h2{
+  margin: 10px 0px;
+}
 .event-list table {
   width: 100%;
   border-collapse: collapse;
