--- a/static/css/organizer.css
+++ b/static/css/organizer.css
@@ -1,82 +1,111 @@
-body {
-    height: 100vh;
-    width: 100%;
-    font-family: Arial, sans-serif;
-    background: #19376D;
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+
+body {
+    width: 100%;
     display: flex;
     align-items: center;
-    flex-direction: column; 
-    
+    /* justify-content: center; */
+    flex-direction: column;
+    background-color: var(--bgcolor);
+
 }
-header{
-    width: 100%;
+
+header {
+    position: fixed;
     height: 60px;
+    width: 100%;
+    background-color: #3b5998;
+    box-shadow: 0px 1px 1px rgb(68, 68, 68);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: none;
+    z-index: 9000;
 }
-ul,li,a,nav{
-    margin: 0;
-    padding: 0;
+
+header.scrolled {
+    background-color: rgba(246, 248, 250, 0.803);
+    box-shadow: 0px 0px 1px rgb(68, 68, 68, 0.5);
+}
+
+header .logo {
+    font-size: 30px;
+    font-weight: 700;
+    color: var(--text-color);
+    margin-left: 150px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+header .logo a {
     text-decoration: none;
+    color: #012b5a;
+}
+
+nav {
+    width: 70%;
+}
+
+nav ul {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    gap: 50px;
     list-style: none;
 }
-.navbar {
-    /* width: 100%; */
-    height: 60px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #0B2447;
-    color: #A5D7E8 ;
-    padding: 5px 70px;
+
+nav ul li a {
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: 700;
+    color: var(--text-color);
+    /* text-shadow: 0px 1px 1px red; */
+
 }
 
-.logo a {
-    font-size: 30px;
-    color: #fff;
-    font-weight: bold;
-}
-.nav-link{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 30px;
-}
-ul {
-    display: flex;
-    gap: 30px;
+.profile {
+    margin: 0px 100px;
+    position: relative;
+    cursor: pointer;
 }
 
-ul li a {
-    font-size: 1rem;
-    color: #fff;
-    /* text-transform: uppercase; */
-    padding: 5px 10px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-ul li a:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-}
-
-.profile{
-    height: 30px;
-    width: 30px;
-}
-.profile .profile_img{
-    height: 100%;
-    width: 100%;
+.profile-image {
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
+    object-fit: cover;
+    /* border: 3px solid #007bff; */
 }
+
+.profile img {
+    width: 35px;
+}
+
+.profile .drop-down {
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.3);
+    padding: 10px;
+    width: 100px;
+    border-radius: 3px;
+    top: 50px;
+    display: none;
+}
+
+.drop-down.drop-down-show {
+    display: block;
+}
+
 .container {
-    background :linear-gradient(to bottom, #0B2447,#19376D,#576CBC);
-    /* background: #576CBC; */
+    background-color: #3b5998;
+
     padding: 20px;
     padding-left: 30px;
     width: 60%;
-    height: 100vh;
-    margin-top: 50px;
+    margin-top: 100px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
@@ -84,7 +113,7 @@ ul li a:hover {
 
 h1 {
     text-align: center;
-    color: #A5D7E8;
+    color: #000;
     margin-bottom: 20px;
 }
 
@@ -95,11 +124,12 @@ h1 {
 .form-group label {
     display: block;
     font-size: 1rem;
-    color: #333;
+    color: #000;
     margin-bottom: 5px;
 }
 
-.form-group input, .form-group textarea {
+.form-group input,
+.form-group textarea {
     width: 95%;
     padding: 10px;
     font-size: 1rem;
@@ -111,12 +141,13 @@ h1 {
     resize: none;
 }
 
-/* .btn {
+.btn {
     display: block;
     width: 100%;
     padding: 10px;
-    background: #007bff;
-    color: #fff;
+    margin-top: 30px;
+    background: #fff;;
+    color: #000;
     font-size: 1rem;
     border: none;
     border-radius: 5px;
@@ -125,4 +156,4 @@ h1 {
 
 .btn:hover {
     background: #0056b3;
-} */
+}
