--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -45,7 +45,6 @@ header .logo a {
 
 nav {
     width: 70%;
-    margin-right: 50px;
 }
 
 nav ul {
@@ -60,20 +59,53 @@ nav ul li a {
     text-decoration: none;
     font-size: 20px;
     font-weight: 700;
-    color: #012b5a;
+    color: var(--text-color);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     /* text-shadow: 0px 1px 1px red; */
 
 }
 
+.profile {
+    margin: 0px 100px;
+    position: relative;
+    cursor: pointer;
+}
+.profile-image {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    object-fit: cover;
+    /* border: 3px solid #007bff; */
+}
+.profile img {
+    width: 35px;
+    height: 35px;
+}
+.profile .drop-down{
+    position: absolute;
+    background-color: rgba(255, 255,255,0.3);
+    padding: 10px;
+    width: 100px;
+    border-radius: 3px;
+    top: 50px;
+    display:none;
+}
+.drop-down.drop-down-show{
+    display: block;
+}
+
 main{
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
 }
 
 .profile-container {
-    background: white;
+    background: rgba(220, 220, 220, 0.579);
     width: 40%;
+    height: 400px;
     margin-right: 20px;
     margin-top: 20px;
     padding: 20px;
@@ -84,6 +116,7 @@ main{
 .profile-image {
     width: 150px;
     height: 150px;
+    margin: 15px 0px;
     border-radius: 50%;
     object-fit: cover;
     border: 3px solid #012b5a;
@@ -100,7 +133,7 @@ main{
 
 input[type="file"] {
     padding: 8px;
-    border: 1px solid #ddd;
+    border: 1px solid #001997;
     border-radius: 5px;
     background: #fff;
     cursor: pointer;
@@ -123,7 +156,7 @@ button:hover {
 
 .event-list{
     margin: 20px;
-    width: 60%;
+    width: 80%;
     text-align: start;
 }
 .event-list h2{
