--- a/static/css/style.css
+++ b/static/css/style.css
@@ -118,7 +118,7 @@ nav ul li a {
 .short-desc{
     position: absolute;
     top: 20%;
-    width: 45%;
+    width: 50%;
     font-size: 30px;
     color: black;
     font-family:Arial, Helvetica, sans-serif;
@@ -131,8 +131,9 @@ nav ul li a {
 .short-desc h1{
     margin-top: 10px;
     margin-bottom: 30px;
-    line-height: 25px;
+    line-height: 10px;
     font-weight: 600;
+    font-size: 10px;
     color: #0A2647;
     text-shadow: 0px 1px 2px #050505;
 }
